IMPALA-9941: ExprTest.CastExprs fails when running with ASAN fix

Fixed the issue with the ASAN build where too short tokens in
timestamps fails because of indexing out of bounds because of a
missing check.
Updated some missed files connected to the drop of dateless timestamps
(IMPALA-9531) regarding tests, comments.

Testing:
 - Ran CORE tests
 - Ran ASAN with EE_TEST_SHARDS=6 (with the help of IMPALA-9887)

Change-Id: I75bd47b6627a2e338c46dc354f7e67d34c1abbcf
Reviewed-on: http://gerrit.cloudera.org:8080/16179
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>